# Juus

./: .gitignore  ARCHITECTURE.MD  Cargo.toml  Dioxus.toml  EBOU.md  README.md
assets/: style.css
crates/client/: Cargo.toml
crates/client/assets/: style.css
crates/client/src/: .main.rs.swp  main.rs
crates/node/: Cargo.toml  secret
crates/node/src/: .main.rs.swp  main.rs
crates/registry/: ARCHITECTURE.MD  Cargo.toml
crates/registry/src/: main.rs
src/: .main.rs.swp  main.rs
src/components/: mod.rs
src/components/loggedin/: mod.rs
src/p2p/: node.rs
src/state/: mod.rs
src/state/types/: message.rs
