[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
axum = { version = "0.7", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

